--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -84,7 +84,7 @@ input, select, textarea {
 
 	body {
 		background-color: #183026;
-		background-image: url("images/overlay.png"), url("../../images/bg.jpg");
+		background-image: url("images/overlay.png"), url("../../images/bg-alt.jpeg");
 		background-repeat: repeat, no-repeat;
 		background-size: auto, cover;
 		background-position: top left, center 0;
@@ -2352,9 +2352,9 @@ input, select, textarea {
 
 			body {
 				background-color: #203936;
-				background-image: url("images/overlay.png"), url("../../images/bg-alt.jpg");
+				background-image: url("images/overlay.png"), url("../../images/bg.jpeg");
 				background-repeat: repeat, no-repeat;
-				background-size: auto, 100% auto;
+				background-size: auto, 120% auto;
 				background-position: top left, top center;
 				background-attachment: scroll, scroll;
 				font-size: 14pt;
